# exrs

./: .gitignore  Cargo.toml  dump.json
examples/: binance_f_orderbook.rs  binance_f_save_all_trades.rs  binance_f_websockets.rs  okex_v5_rest.rs  okex_v5_websockets.rs
src/: lib.rs
src/binance/: account.rs  client.rs  config.rs  errors.rs  rest_model.rs  websockets.rs  ws_model.rs
src/binance_f/: account.rs  client.rs  config.rs  errors.rs  market.rs  rest_model.rs  websockets.rs  ws_model.rs
src/okex_v5/: account.rs  client.rs  config.rs  errors.rs  general.rs  margin.rs  market.rs  rest_model.rs  userstream.rs  websockets.rs  ws_model.rs
